NEW: atom in spherical coordinates modifications to grid

--- a/standard_graphs.ipynb
+++ b/standard_graphs.ipynb
@@ -34,6 +34,10 @@
     "from scipy.optimize import curve_fit\n",
     "from scipy import interpolate\n",
     "\n",
+    "import plotly\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
     "import itertools\n",
     "\n",
     "import functions_giammi as fugi\n",
@@ -178,8 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MFPAD_RMOx_CL=pd.read_table(r'../PYTHON_graphs/DATA/MOx_Kilian/RMoxCLMFPAD.dat',names=['phi','ctheta','light_dir', 'counts'],sep='\\t',skiprows=1)\n",
-    "MFPAD_SMOx_CL=pd.read_table(r'../PYTHON_graphs/DATA/MOx_Kilian/SMoxCLMFPAD.dat',names=['phi','ctheta','light_dir', 'counts'],sep='\\t',skiprows=1)\n",
+    "MFPAD_RMOx_CL=pd.read_table(r'../PYTHON_graphs/DATA/MOx_Kilian/RMoxCLMFPAD.dat',names=['phi','ctheta','light_dir','counts'],sep='\\t',skiprows=1)\n",
+    "MFPAD_SMOx_CL=pd.read_table(r'../PYTHON_graphs/DATA/MOx_Kilian/SMoxCLMFPAD.dat',names=['phi','ctheta','light_dir','counts'],sep='\\t',skiprows=1)\n",
     "MFPAD_RMOx_CR=pd.read_table(r'../PYTHON_graphs/DATA/MOx_Kilian/RMoxCRMFPADmirror.dat',names=['phi','ctheta','light_dir', 'counts'],sep='\\t',skiprows=1)\n",
     "MFPAD_SMOx_CR=pd.read_table(r'../PYTHON_graphs/DATA/MOx_Kilian/SMoxCRMFPADmirror.dat',names=['phi','ctheta','light_dir', 'counts'],sep='\\t',skiprows=1)\n",
     "\n",
@@ -258,10 +262,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testStot=fugi.normalise_with_err(np.sum((np.sum(SMOx_MFPAD.reshape(6,12,-1),axis=1)).reshape(6,54,24),axis=1),normtype=2)\n",
-    "testRtot=fugi.normalise_with_err(np.sum((np.sum(RMOx_MFPAD.reshape(6,12,-1),axis=1)).reshape(6,54,24),axis=1),normtype=2)\n",
+    "\"\"\"\n",
+    "The original PBD id centered aroud the #2 C and the #3 and #2 C lay on a line: the molecule appears to be rotated of about 30 deg with\n",
+    "respect to Blender, which implies shifting in phi angle \n",
+    "\"\"\"\n",
+    "def listOfTuples(l1, l2):\n",
+    "    return list(map(lambda x, y:(x,y), l1, l2))\n",
     "\n",
-    "PECD_test = np.nan_to_num(np.divide(np.subtract(testStot,testRtot),np.add(testStot,testRtot))) #TEST"
+    "def listOfTuples3D(l1, l2, l3):\n",
+    "    return list(map(lambda x, y, z:(x,y,z), l1, l2, l3))\n",
+    "\n",
+    "PDB_S_coord_raw=pd.read_table(r'../PYTHON_graphs/MOL_structures/S-TMOX.pdb',header=None,delim_whitespace=True,nrows=10,skiprows=2)\n",
+    "df_S_PDB=PDB_S_coord_raw.drop(PDB_S_coord_raw.columns[[0,1,3,4,8,9,10]], axis=1)\n",
+    "df_S_PDB.columns = ['atom', 'x', 'y', 'z']\n",
+    "df_R_PDB=df_S_PDB.copy()\n",
+    "\n",
+    "edge_list=[(0,6),(1,6),(2,6),(3,4),(3,5),(4,3),(4,5),(4,6),(4,7),(5,3),(5,4),(5,8),(5,9),(6,0),(6,1),(6,2),(6,4),(7,4),(8,5),(9,5)]\n",
+    "\n",
+    "a=-125.; b=0.; g=0.\n",
+    "\n",
+    "# df_R_PDB['x'] = 0.664 + df_R_PDB['x'] #shifting the origin of the molecule\n",
+    "# df_R_PDB['y'] = 1. + df_R_PDB['y'] #shifting the origin of the molecule\n",
+    "# df_R_PDB['z'] = +0.3 + df_R_PDB['z'] #shifting the origin of the molecule\n",
+    "df_R_PDB['z'] = -1 * df_R_PDB['z'] #mirroring the S enantiomer\n",
+    "\n",
+    "##################### R enationer ########################\n",
+    "xyzm = np.stack((df_R_PDB['x'], df_R_PDB['y'], df_R_PDB['z']))\n",
+    "x_rot_R, y_rot_R, z_rot_R = np.einsum('ik, kj -> ij', fugi.rot3d(a*np.pi/180,b*np.pi/180,g*np.pi/180,convention=1).T, xyzm)\n",
+    "\n",
+    "r_R=[];ctheta_PDB_R=[];phi_PDB_R=[]; r_R_rot=[];ctheta_PDB_R_rot=[];phi_PDB_R_rot=[];\n",
+    "for index, row in df_R_PDB.iterrows():\n",
+    "    r_R.append(np.sqrt(row['x']**2+row['y']**2+row['z']**2))\n",
+    "    ctheta_PDB_R.append(row['z']/r_R[index])\n",
+    "    phi_PDB_R.append(np.arctan2(row['y'],row['x'])*180./np.pi)\n",
+    "\n",
+    "    r_R_rot.append(np.sqrt(x_rot_R[index]**2+y_rot_R[index]**2+z_rot_R[index]**2))\n",
+    "    ctheta_PDB_R_rot.append(z_rot_R[index]/r_R_rot[index])\n",
+    "    phi_PDB_R_rot.append(np.arctan2(y_rot_R[index],x_rot_R[index])*180./np.pi)\n",
+    "\n",
+    "df_R_PDB.insert(4, \"x_rot\", x_rot_R, True); df_R_PDB.insert(5, \"y_rot\", y_rot_R, True); df_R_PDB.insert(6, \"z_rot\", z_rot_R, True);\n",
+    "df_R_PDB.insert(7, \"phi\", phi_PDB_R, True); df_R_PDB.insert(8, \"ctheta\", ctheta_PDB_R, True);\n",
+    "df_R_PDB.insert(9, \"phi_rot\", phi_PDB_R_rot, True); df_R_PDB.insert(10, \"ctheta_rot\", ctheta_PDB_R_rot, True)\n",
+    "\n",
+    "xyzm_rot = np.stack((df_R_PDB['x_rot'], df_R_PDB['y_rot'], df_R_PDB['z_rot']))\n",
+    "\n",
+    "#we  need to create lists that contain the starting and ending coordinates of each edge.\n",
+    "x_edges_R=[]; y_edges_R=[]; z_edges_R=[]\n",
+    "x_edges_rot_R=[]; y_edges_rot_R=[]; z_edges_rot_R=[]\n",
+    "\n",
+    "#need to fill these with all of the coordiates\n",
+    "for edge in edge_list:\n",
+    "    x_coords_rot = [xyzm_rot.T[edge[0]][0],xyzm_rot.T[edge[1]][0],None]\n",
+    "    x_edges_rot_R += x_coords_rot\n",
+    "    x_coords = [xyzm.T[edge[0]][0],xyzm.T[edge[1]][0],None]\n",
+    "    x_edges_R += x_coords\n",
+    "\n",
+    "    y_coords_rot = [xyzm_rot.T[edge[0]][1],xyzm_rot.T[edge[1]][1],None]\n",
+    "    y_edges_rot_R += y_coords_rot\n",
+    "    y_coords = [xyzm.T[edge[0]][1],xyzm.T[edge[1]][1],None]\n",
+    "    y_edges_R += y_coords\n",
+    "\n",
+    "    z_coords_rot = [xyzm_rot.T[edge[0]][2],xyzm_rot.T[edge[1]][2],None]\n",
+    "    z_edges_rot_R += z_coords_rot\n",
+    "    z_coords = [xyzm.T[edge[0]][2],xyzm.T[edge[1]][2],None]\n",
+    "    z_edges_R += z_coords\n",
+    "\n",
+    "\n",
+    "####################### S enationer ######################\n",
+    "xyzm = np.stack((df_S_PDB['x'], df_S_PDB['y'], df_S_PDB['z']))\n",
+    "x_rot_S, y_rot_S, z_rot_S = np.einsum('ik, kj -> ij', fugi.rot3d(a*np.pi/180,b*np.pi/180,g*np.pi/180,convention=1).T, xyzm)\n",
+    "\n",
+    "r_S=[];ctheta_PDB_S=[];phi_PDB_S=[];r_S_rot=[];ctheta_PDB_S_rot=[];phi_PDB_S_rot=[];\n",
+    "for index, row in df_S_PDB.iterrows():\n",
+    "    r_S.append(np.sqrt(row['x']**2+row['y']**2+row['z']**2))\n",
+    "    ctheta_PDB_S.append(row['z']/r_S[index])\n",
+    "    phi_PDB_S.append(np.arctan2(row['y'],row['x'])*180./np.pi)\n",
+    "\n",
+    "    r_S_rot.append(np.sqrt(x_rot_S[index]**2+y_rot_S[index]**2+z_rot_S[index]**2))\n",
+    "    ctheta_PDB_S_rot.append(z_rot_S[index]/r_S_rot[index])\n",
+    "    phi_PDB_S_rot.append(np.arctan2(y_rot_S[index],x_rot_S[index])*180./np.pi)\n",
+    "\n",
+    "df_S_PDB.insert(4, \"x_rot\", x_rot_S, True); df_S_PDB.insert(5, \"y_rot\", y_rot_S, True); df_S_PDB.insert(6, \"z_rot\", z_rot_S, True);\n",
+    "df_S_PDB.insert(7, \"phi\", phi_PDB_S, True); df_S_PDB.insert(8, \"ctheta\", ctheta_PDB_S, True);\n",
+    "df_S_PDB.insert(9, \"phi_rot\", phi_PDB_S_rot, True); df_S_PDB.insert(10, \"ctheta_rot\", ctheta_PDB_S_rot, True)\n",
+    "\n",
+    "xyzm_rot = np.stack((df_S_PDB['x_rot'], df_S_PDB['y_rot'], df_S_PDB['z_rot']))\n",
+    "\n",
+    "x_edges_S=[]; y_edges_S=[]; z_edges_S=[]\n",
+    "x_edges_rot_S=[]; y_edges_rot_S=[]; z_edges_rot_S=[]\n",
+    "\n",
+    "for edge in edge_list:\n",
+    "    x_coords_rot = [xyzm_rot.T[edge[0]][0],xyzm_rot.T[edge[1]][0],None]\n",
+    "    x_edges_rot_S += x_coords_rot\n",
+    "    x_coords = [xyzm.T[edge[0]][0],xyzm.T[edge[1]][0],None]\n",
+    "    x_edges_S += x_coords\n",
+    "\n",
+    "    y_coords_rot = [xyzm_rot.T[edge[0]][1],xyzm_rot.T[edge[1]][1],None]\n",
+    "    y_edges_rot_S += y_coords_rot\n",
+    "    y_coords = [xyzm.T[edge[0]][1],xyzm.T[edge[1]][1],None]\n",
+    "    y_edges_S += y_coords\n",
+    "\n",
+    "    z_coords_rot = [xyzm_rot.T[edge[0]][2],xyzm_rot.T[edge[1]][2],None]\n",
+    "    z_edges_rot_S += z_coords_rot\n",
+    "    z_coords = [xyzm.T[edge[0]][2],xyzm.T[edge[1]][2],None]\n",
+    "    z_edges_S += z_coords"
    ]
   },
   {
@@ -270,7 +374,129 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(PECD_test.T)"
+    "df_R_PDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace_nodes = go.Scatter3d(x=df_R_PDB['x_rot'], y=df_R_PDB['y_rot'], z=df_R_PDB['z_rot'],\n",
+    "                        text=df_R_PDB['atom'], mode='markers', marker=dict( size=15, opacity=0.8),name='atoms')\n",
+    "\n",
+    "trace_edges_rot = go.Scatter3d(x=x_edges_rot_R, y=y_edges_rot_R, z=z_edges_rot_R,\n",
+    "                        mode='lines', line=dict(color='black', width=6), name='bonds rot',hoverinfo='none')\n",
+    "\n",
+    "trace_edges = go.Scatter3d(x=x_edges_R,y=y_edges_R,z=z_edges_R,\n",
+    "                        mode='lines',line=dict(color='red', width=2),name='original',hoverinfo='none')\n",
+    "\n",
+    "origin = go.Scatter3d(x=[0.],y=[0.],z=[0.],\n",
+    "                     mode='markers', marker=dict(color='red', size=10, opacity=1),name=\"origin\")\n",
+    "\n",
+    "x= np.linspace(-2, 2, 20); y= np.linspace(-2, 2, 20); z= 0*np.ones((20,20))\n",
+    "mycolorscale = [[0, '#aa9ce2'],[1, '#aa9ce2']]\n",
+    "\n",
+    "surf = go.Surface(x=x, y=y, z=z, colorscale=mycolorscale, opacity=0.4, showscale=False)\n",
+    "\n",
+    "data = [trace_nodes, trace_edges_rot, trace_edges, origin, surf]\n",
+    "fig = go.Figure(data=data)\n",
+    "\n",
+    "fig.update_layout(width=900, height=800)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots(1,3, figsize=(35,10))\n",
+    "xy_R = listOfTuples(df_R_PDB[\"phi\"], df_R_PDB[\"ctheta\"])\n",
+    "xy_S = listOfTuples(df_S_PDB[\"phi\"], df_S_PDB[\"ctheta\"])\n",
+    "xy_rot_R = listOfTuples(df_R_PDB[\"phi_rot\"], df_R_PDB[\"ctheta_rot\"])\n",
+    "xy_rot_S = listOfTuples(df_S_PDB[\"phi_rot\"], df_S_PDB[\"ctheta_rot\"])\n",
+    "aspect=(df_R_PDB[\"phi\"].max()/df_R_PDB[\"ctheta\"].max())\n",
+    "\n",
+    "ax[0].plot(df_R_PDB[\"phi\"], df_R_PDB[\"ctheta\"], \"o\")\n",
+    "for index, row in df_R_PDB.iterrows():\n",
+    "    ax[0].annotate(row['atom'], xy=xy_R[index], textcoords='data')\n",
+    "\n",
+    "ax[0].set_title(\"R enant atom position\")\n",
+    "ax[0].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[0].set_xlim([-175,175])\n",
+    "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax[0].set_ylim([-0.944,0.944])\n",
+    "# ax[0].set_aspect(aspect)\n",
+    "ax[0].set_aspect(aspect, adjustable='box')\n",
+    "ax[0].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
+    "\n",
+    "ax[1].plot(df_R_PDB[\"phi_rot\"], df_R_PDB[\"ctheta_rot\"], \"o\")\n",
+    "for index, row in df_R_PDB.iterrows():\n",
+    "    ax[1].annotate(row['atom'], xy=xy_rot_R[index], textcoords='data')\n",
+    "\n",
+    "ax[1].set_title(\"R enant atom position ROT\")\n",
+    "ax[1].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[1].set_xlim([-175,175])\n",
+    "ax[1].set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax[1].set_ylim([-0.944,0.944])\n",
+    "# ax[1].set_aspect(aspect)\n",
+    "ax[1].set_aspect(aspect, adjustable='box')\n",
+    "ax[1].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
+    "\n",
+    "ax[2].plot(df_S_PDB[\"phi_rot\"], df_S_PDB[\"ctheta_rot\"], \"o\")\n",
+    "for index, row in df_S_PDB.iterrows():\n",
+    "    ax[2].annotate(row['atom'], xy=xy_rot_S[index], textcoords='data')\n",
+    "\n",
+    "ax[2].set_title(\"S enant atom position ROT\")\n",
+    "ax[2].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[2].set_xlim([-175,175])\n",
+    "ax[2].set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax[2].set_ylim([-0.944,0.944])\n",
+    "# ax[2].set_aspect(aspect)\n",
+    "ax[2].set_aspect(aspect, adjustable='box')\n",
+    "ax[2].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
+    "\n",
+    "fig.savefig(dir+\"atom_position_sphericalcoords.png\", dpi=300, transparent=True, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"atom_position_sphericalcoords.svg\", dpi=300, transparent=True, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#just a test for PECD as in the diatomic case: sum over the phi_ph and sum over the phi_elec\n",
+    "#the problem is the mismatch between the integration over phi_ph and the definition of the Euler angle beta\n",
+    "testStot=fugi.normalise_with_err(np.sum((np.sum(SMOx_MFPAD.reshape(6,12,-1),axis=1)).reshape(6,54,24),axis=1),normtype=2)\n",
+    "testRtot=fugi.normalise_with_err(np.sum((np.sum(RMOx_MFPAD.reshape(6,12,-1),axis=1)).reshape(6,54,24),axis=1),normtype=2)\n",
+    "\n",
+    "PECD_test = np.nan_to_num(np.divide(np.subtract(testStot,testRtot),np.add(testStot,testRtot))) #TEST\n",
+    "\n",
+    "print(PECD_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beta_photon = np.linspace(-180,180,6)\n",
+    "\n",
+    "fig, ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs,ax=fugi.plot_interpolation(beta_photon,cthea_MOx,(PECD_test*100).T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01, n=20, gaussian=7.)\n",
+    "ax.set_title(\"integrated PECD S-R MOx @ 11.5 eV\")\n",
+    "\n",
+    "aspect=(beta_photon.max()/cthea_MOx.max())\n",
+    "ax.set_xlabel('\\u03B2 [DEG]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.ax.set_ylabel('PECD %')\n",
+    "ax.set_aspect(aspect)"
    ]
   },
   {
@@ -434,12 +660,10 @@
     "plt.plot([], [], ' ', label=fit_info)\n",
     "\n",
     "ax.legend(loc=\"best\",fontsize=\"small\")\n",
-    "ax.grid()\n",
+    "ax.grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
     "\n",
-    "\n",
-    "plt.plot()\n",
     "fig.savefig(dir+\"el_sum_wlayer_proj.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
-    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"el_sum_wlayer_proj.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -515,7 +739,7 @@
     "\n",
     "plt.plot()\n",
     "fig.savefig(dir+\"rec_sum_wlayer_proj.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
-    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"rec_sum_wlayer_proj.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -877,7 +1101,7 @@
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
-    "fig.savefig(dir+\"KER_gaus.png\", dpi=300, transparent=False,bbox_inches='tight')"
+    "fig.savefig(dir+\"KER_gaus_ang.png\", dpi=300, transparent=False,bbox_inches='tight')"
    ]
   },
   {
@@ -1214,7 +1438,7 @@
     "    if i == 1:\n",
     "        text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
     "    if i == 2:\n",
-    "        text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
+    "        text=ax.text(0.85,0.15, \"$C_{2}H_{2}^{+}$\") #,fontweight=\"bold\")\n",
     "    if i == 3:\n",
     "        text=ax.text(0.85,0.15, \"$C_{2}H_{3}^{+}$\") #,fontweight=\"bold\")\n",
     "        ax.set_xlabel('p$_{x}$ [a.u.]')\n",
@@ -1272,22 +1496,11 @@
     "fig.savefig(dir+\"Netwon_all_CH9.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TFMOX \n",
-    "#cos theta vs energy CH14\n",
-    "#momentum sum/rel"
-   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
