--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -306,7 +306,7 @@
     "    ax1.set_title(\"S CL \"+CH+\" \"+en)\n",
     "else:\n",
     "    ax1.set_title(\"R CL \"+CH+\" \"+en)\n",
-    "ax1.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax1.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax1.set_ylabel('counts')\n",
     "\n",
     "fit_info = []\n",
@@ -336,7 +336,7 @@
     "    ax2.set_title(\"S CR \"+CH+\" \"+en)\n",
     "else:\n",
     "    ax2.set_title(\"R CR \"+CH+\" \"+en)\n",
-    "ax2.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax2.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax2.set_ylabel('counts')\n",
     "\n",
     "fit_info = []\n",
@@ -387,7 +387,7 @@
     "else:\n",
     "    ax.set_title(\"R CR+CL \"+CH+\" \"+en)\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax.set_ylabel('counts')\n",
     "# ax.ticklabel_format(axis=\"y\",style=\"sci\",scilimits=(0,1))\n",
     "\n",
@@ -439,7 +439,7 @@
     "else:\n",
     "    ax.set_title(\"R CR-CL all dir \"+CH+\" \"+en)\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax.set_ylabel('PECD')\n",
     "\n",
     "fit_info = []\n",
@@ -470,17 +470,17 @@
     "        return (-1.35*x/(1-0.8166/2*(3*x**2-1)/2))/100\n",
     "\n",
     "    x=np.linspace(-1,1,50)\n",
-    "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10, 5.5), sharey=True, constrained_layout=True)\n",
+    "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10.5, 5.5), sharey=True, constrained_layout=True)\n",
     "    fumi.plotminuit2(x_data,y_data,y_err/2,m,ax1,xlim=[-1,1], ylim=custom_ylim, nlabel=\"PECD fit\")\n",
-    "    ax2.plot(x,rnd_curve(x),\"--\", label=\"theoretical fit\")\n",
+    "    ax2.plot(x,rnd_curve(x),\"--\", label=\"theoretical model\")\n",
     "    ax2.errorbar(ctheta_Mox,np.flip((exp_MOx[\"value_R29A\"]/100).values),yerr=np.flip((exp_MOx[\"error\"]/100).values),fmt=\"o\")\n",
     "    ax2.axhline(0, color='black', alpha=0.2, lw=2)\n",
     "    \n",
     "    ax1.set_title(\"R-TFMOx \")\n",
     "    ax2.set_title(\"S-MOx \")\n",
     "    ax1.set_aspect(\"equal\",'datalim')\n",
-    "    ax1.set_xlabel('cos(\\u03D1) [adm]')\n",
-    "    ax2.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax1.set_xlabel('cos\\u03D1 [adm]')\n",
+    "    ax2.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax1.set_ylabel('PECD')\n",
     "    ax2.set_ylim([-0.04,0.06])\n",
     "    ax2.set_xlim([None,None])\n",
@@ -491,7 +491,7 @@
     "    ax1.plot([], [], ' ', label=fit_info[0]+\"\\n\"+fit_info[1])\n",
     "    ax1.legend(loc=\"best\")\n",
     "\n",
-    "    ax2.plot([], [], ' ', label=\"$b1_{th}$ = 0.0156 \\u00b1 0.002 \\n$b2_{th}$ = 0.654 \\u00b1 0.072\")\n",
+    "    ax2.plot([], [], ' ', label=\"$b1$ = 0.0156 \\u00b1 0.002 \\n$b2$ = 0.654 \\u00b1 0.072\")\n",
     "    ax2.legend(loc=\"best\")\n",
     "\n",
     "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
@@ -530,7 +530,7 @@
     "    else:\n",
     "        ax.set_title(\"R CR-CL pol \"+CH+\" \"+en)\n",
     "\n",
-    "    ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax.set_ylabel('PECD')\n",
     "\n",
     "    fit_info = []\n",
@@ -563,15 +563,15 @@
     "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10, 5.5), sharey=True, constrained_layout=True)\n",
     "\n",
     "    fumi.plotminuit2(x_data,y_data,y_err,m,ax1,xlim=[-1,1], ylim=custom_ylim, nlabel=\"PECD fit\")\n",
-    "    ax2.plot(np.flip((th_MOx[\"ctheta\"]).values),np.flip((th_MOx[\"value\"]/100).values),\"--\", label=\"theoretical fit\")\n",
+    "    ax2.plot(np.flip((th_MOx[\"ctheta\"]).values),np.flip((th_MOx[\"value\"]/100).values),\"--\", label=\"theoretical model\")\n",
     "    ax2.errorbar(ctheta_Mox,np.flip((exp_MOx[\"value_42151A\"]/100).values),yerr=np.flip((exp_MOx[\"error.1\"]/100).values),fmt=\"o\")\n",
     "    ax2.axhline(0, color='black', alpha=0.2, lw=2)\n",
     "    \n",
     "    ax1.set_title(\"R-TFMOx\")\n",
     "    ax2.set_title(\"S-MOx\")\n",
     "    ax1.set_aspect(\"equal\",'datalim')\n",
-    "    ax1.set_xlabel('cos(\\u03D1) [adm]')\n",
-    "    ax2.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax1.set_xlabel('cos\\u03D1 [adm]')\n",
+    "    ax2.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax1.set_ylabel('PECD')\n",
     "    ax2.set_xlim([None,None])\n",
     "    # ax1.grid();ax2.grid()\n",
@@ -582,7 +582,7 @@
     "    ax1.plot([], [], ' ', label=fit_info[0]+\"\\n\"+fit_info[1])\n",
     "    ax1.legend(loc=\"best\")\n",
     "\n",
-    "    ax2.plot([], [], ' ', label=\"$b1_{th}$ = 0.123 \\u00b1 0.002 \\n$b2_{th}$ = 0.854 \\u00b1 0.072\")\n",
+    "    ax2.plot([], [], ' ', label=\"$b1$ = 0.123 \\u00b1 0.002 \\n$b2$ = 0.854 \\u00b1 0.072\")\n",
     "    ax2.legend(loc=\"best\")\n",
     "    \n",
     "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
