changes to the grid

--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -75,10 +75,11 @@
     "ax.set_xlabel('photoelectron energy [eV]')\n",
     "ax.set_ylabel('squared radius [mm\\u00b2]')\n",
     "ax.legend(title=fit_info, loc=\"best\")\n",
-    "ax.grid()\n",
     "\n",
-    "fig.savefig(dir+\"regression_radius.svg\", dpi=300, transparent=False)\n",
-    "fig.savefig(dir+\"regression_radius.png\", dpi=300, transparent=False)"
+    "ax.grid(linestyle = '-', linewidth = 2 , alpha = 0.4)\n",
+    "\n",
+    "fig.savefig(dir+\"regression_radius.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"regression_radius.png\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -132,7 +133,7 @@
     "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
-    "fig.savefig(dir+\"fish_fillet_y.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"fish_fillet_y.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -162,7 +163,7 @@
     "# cbar.set_ticks([fish_fillet_x_masked.min(),fish_fillet_x_masked.max()])\n",
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
-    "fig.savefig(dir+\"fish_fillet_x.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"fish_fillet_x.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"fish_fillet_x.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -189,8 +190,8 @@
     "cs.cmap.set_under(color=\"k\",alpha=0.2)\n",
     "\n",
     "\n",
-    "# fig.savefig(dir+\"fish_fillet_y.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
-    "# fig.savefig(dir+\"fish_fillet_y.svg\", figsize=(50, 24), dpi=144, transparent=False)"
+    "# fig.savefig(dir+\"fish_fillet_y.png\", figsize=(50, 24), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", figsize=(50, 24), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -217,7 +218,7 @@
     "# cbar.set_ticks([cthetaEE_masked.min(),cthetaEE_masked.max()])\n",
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
-    "fig.savefig(dir+\"ctheta_EE.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"ctheta_EE.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"ctheta_EE.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -240,12 +241,10 @@
     "ax.plot(en,cthetaEE_proj_masked)\n",
     "\n",
     "ax.legend(loc=\"best\",fontsize=\"small\")\n",
-    "ax.grid()\n",
+    "ax.grid(linestyle = '-', linewidth = 2 , alpha = 0.4)\n",
     "\n",
-    "\n",
-    "plt.plot()\n",
-    "# fig.savefig(dir+\"el_sum_wlayer_proj.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+    "# fig.savefig(dir+\"el_sum_wlayer_proj.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"el_sum_wlayer_proj.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
