--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -42,17 +42,22 @@
     "#loads the temperaure cmap like Philipp for both matpplotlib and plotly\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
+    "#R enantiomer for experiments\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
+    "\n",
+    "#S enantiomer for experiments\n",
     "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
     "\n",
     "# glob has to be sorted (both in unix and windows)\n",
     "all_files = sorted(glob.glob(path + \"/**.dat\"))\n",
     "\n",
     "#if True it computes the 72 MFPAD\n",
+    "enant=\"R\"\n",
     "MFPAD=False\n",
+    "optimization=False\n",
     "\n",
     "li = []\n",
     "cosphi_th = []\n",
@@ -324,16 +329,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=0.5 ;b=1.5 ;c=-2.875; CH = \"CH11\" #CH11\n",
-    "# a=-10. ;b=-3. ;c=-2.; CH = \"CH11\" #old\n",
-    "# a=50. ;b=30. ;c=95.; CH = \"CH9\"\n",
+    "MFPAD_S_phi_sum_norm = fugi.normalise_with_err(MFPAD_S_phi_sum,normtype=3)\n",
+    "MFPAD_R_phi_sum_norm = fugi.normalise_with_err(MFPAD_R_phi_sum,normtype=3)\n",
     "\n",
-    "cosphi_adj_phi_rot=np.column_stack((np.ones(72)*np.cos(b*np.pi/180.),np.ones(72)*a,np.ones(72)*c))\n",
-    "\n",
-    "MFPAD_S_phi_rot_LF,dummy1,dummy2=fugi.rot3d_MFPAD(MFPAD_S_phi,theta_rad_sorted,phi_rad_sorted,cosphi_adj_phi_rot,phiM,cosM,convention=1,s=0.0001)\n",
-    "\n",
-    "MFPAD_S_phi_rot_LF_norm = fugi.normalise_with_err(MFPAD_S_phi_rot_LF,normtype=3)\n",
-    "MFPAD_S_phi_sum_norm = fugi.normalise_with_err(MFPAD_S_phi_sum,normtype=3)"
+    "if optimization == True:\n",
+    "    #EULER angles for optimized rotation from distance optimization anglorithm  \n",
+    "    a=0.5 ;b=1.5 ;c=-2.875; CH = \"CH11\" #CH11\n",
+    "    # a=-10. ;b=-3. ;c=-2.; CH = \"CH11\" #old\n",
+    "    # a=50. ;b=30. ;c=95.; CH = \"CH9\"\n",
+    "    \n",
+    "    cosphi_adj_phi_rot=np.column_stack((np.ones(72)*np.cos(b*np.pi/180.),np.ones(72)*a,np.ones(72)*c))\n",
+    "    \n",
+    "    MFPAD_S_phi_rot_LF,dummy1,dummy2=fugi.rot3d_MFPAD(MFPAD_S_phi,theta_rad_sorted,phi_rad_sorted,cosphi_adj_phi_rot,phiM,cosM,convention=1,s=0.0001)\n",
+    "    MFPAD_R_phi_rot_LF,dummy1,dummy2=fugi.rot3d_MFPAD(MFPAD_R_phi,theta_rad_sorted,phi_rad_sorted,cosphi_adj_phi_rot,phiM,cosM,convention=1,s=0.0001)\n",
+    "    MFPAD_S_phi_rot_LF_norm = fugi.normalise_with_err(MFPAD_S_phi_rot_LF,normtype=3)\n",
+    "    MFPAD_R_phi_rot_LF_norm = fugi.normalise_with_err(MFPAD_R_phi_rot_LF,normtype=3)"
    ]
   },
   {
@@ -379,7 +389,6 @@
     "dfind.loc[dfind[\"phi\"] == 74.318]\n",
     "\n",
     "#selecting the rght file according to the needs [\"filename\"] == \"x_x\"]\n",
-    "#NOTE select S or R depending on the needs. \n",
     "nitem=37\n",
     "# nitem=4"
    ]
@@ -391,15 +400,20 @@
    "outputs": [],
    "source": [
     "fig,ax=plt.subplots()\n",
-    "titel_fig=\"S MFPAD el \"+str(nitem)\n",
+    "titel_fig=enant+\" MFPAD el \"+str(nitem)\n",
     "\n",
-    "cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
-    "# cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "if enant == \"R\":\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "    # cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "else:\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "    # cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_title(titel_fig)\n",
     "\n",
-    "fig.savefig(\"OUTPUTS/Theory/MFPAD_el\"+str(nitem)+\"_\"+en+\"_theory.png\")"
+    "fig.savefig(\"OUTPUTS/Theory/MFPAD_el_\"+enant+\"_\"+str(nitem)+\"_\"+en+\"_theory.png\")"
    ]
   },
   {
@@ -409,8 +423,17 @@
    "outputs": [],
    "source": [
     "# convertion to spherical coordinates 1D vectors of shape (20000,1)\n",
-    "counts = MFPAD_S_phi[nitem].reshape(-1)\n",
-    "# counts = MFPAD_S_phi_rot_LF[nitem].reshape(-1)\n",
+    "if enant == \"R\":\n",
+    "    counts = MFPAD_R_phi[nitem].reshape(-1)\n",
+    "    countss = MFPAD_R_phi_sum_norm.reshape(-1)\n",
+    "    # counts = MFPAD_R_phi_rot_LF[nitem].reshape(-1)\n",
+    "\n",
+    "else:\n",
+    "    counts = MFPAD_S_phi[nitem].reshape(-1)\n",
+    "    countss = MFPAD_S_phi_sum_norm.reshape(-1)\n",
+    "    # counts = MFPAD_S_phi_rot_LF[nitem].reshape(-1)\n",
+    "\n",
+    "#single MFPAD\n",
     "x = counts * np.sin(theta_rad_sorted) * np.cos(phi_rad_sorted)\n",
     "X = np.array(x).reshape(200,100)\n",
     "y = counts * np.sin(theta_rad_sorted) * np.sin(phi_rad_sorted)\n",
@@ -419,7 +442,18 @@
     "Z = np.array(z).reshape(200,100)\n",
     "\n",
     "d = np.sqrt(x**2+y**2+z**2)\n",
-    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)\n",
+    "\n",
+    "#sum MFPAD\n",
+    "xs = countss * np.sin(theta_rad_sorted) * np.cos(phi_rad_sorted)\n",
+    "Xs = np.array(xs).reshape(200,100)\n",
+    "ys = countss * np.sin(theta_rad_sorted) * np.sin(phi_rad_sorted)\n",
+    "Ys = np.array(ys).reshape(200,100)\n",
+    "zs = countss * np.cos(theta_rad_sorted)\n",
+    "Zs = np.array(zs).reshape(200,100)\n",
+    "\n",
+    "ds = np.sqrt(xs**2+ys**2+zs**2)\n",
+    "d_matrixs = np.sqrt(Xs**2+Ys**2+Zs**2)\n"
    ]
   },
   {
@@ -429,15 +463,20 @@
    "outputs": [],
    "source": [
     "fig,ax=plt.subplots()\n",
-    "titel_fig=\"S MFPAD sum\"\n",
+    "titel_fig=enant+\" MFPAD sum\"\n",
     "\n",
-    "cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_sum.T,ax=ax, ystep=0.01, cont=True)\n",
-    "# cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "if enant == \"R\":\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_sum.T,ax=ax, ystep=0.01, cont=True)\n",
+    "    # cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "else:\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_sum.T,ax=ax, ystep=0.01, cont=True)\n",
+    "    # cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_title(titel_fig)\n",
     "\n",
-    "fig.savefig(\"OUTPUTS/Theory/MFPAD_el_sum_\"+en+\"_theory.png\")"
+    "fig.savefig(\"OUTPUTS/Theory/MFPAD_\"+enant+\"_el_sum_\"+en+\"_theory.png\")"
    ]
   },
   {
@@ -465,26 +504,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convertion to spherical coordinates 1D vectors of shape (20000,1)\n",
-    "# counts = MFPAD_S_phi_sum_norm.reshape(-1)\n",
-    "counts = MFPAD_S_phi_rot_LF[nitem].reshape(-1)\n",
-    "xs = counts * np.sin(theta_rad_sorted) * np.cos(phi_rad_sorted)\n",
-    "Xs = np.array(xs).reshape(200,100)\n",
-    "ys = counts * np.sin(theta_rad_sorted) * np.sin(phi_rad_sorted)\n",
-    "Ys = np.array(ys).reshape(200,100)\n",
-    "zs = counts * np.cos(theta_rad_sorted)\n",
-    "Zs = np.array(zs).reshape(200,100)\n",
-    "\n",
-    "ds = np.sqrt(xs**2+ys**2+zs**2)\n",
-    "d_matrixs = np.sqrt(Xs**2+Ys**2+Zs**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Go scatters do not provide a legend\n",
     "fig = go.Figure(data=[go.Scatter3d(x=xs, y=ys, z=zs,\n",
     "                    mode='markers',\n",
@@ -497,7 +516,7 @@
     "                   )\n",
     "                )])\n",
     "\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs theory scattered\",\n",
+    "fig.update_layout(title=\"TFMOx MFPAD theory scattered\",\n",
     "                  width=500,\n",
     "                  height=500,\n",
     "                  margin=dict(l=65, r=50, b=65, t=90))\n",
@@ -512,7 +531,7 @@
    "outputs": [],
    "source": [
     "fig = go.Figure(data=[go.Surface(z=Zs[0:200,0:100], x=Xs[0:200,0:100], y=Ys[0:200,0:100], surfacecolor=d_matrixs, colorscale='Viridis', connectgaps=True)])\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs theory sur NO FIX \"+str(nitem), autosize=False,\n",
+    "fig.update_layout(title=\"TFMOx MFPAD theory sur NO FIX \"+str(nitem), autosize=False,\n",
     "                # width=500,\n",
     "                # height=500,\n",
     "                # margin=dict(l=65, r=50, b=65, t=90))\n",
@@ -534,7 +553,7 @@
    "outputs": [],
    "source": [
     "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, colorscale='Viridis', connectgaps=True)])\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs theory sur NO FIX \"+str(nitem), autosize=False,\n",
+    "fig.update_layout(title=\"TFMOx MFPAD theory sur NO FIX \"+str(nitem), autosize=False,\n",
     "                # width=500,\n",
     "                # height=500,\n",
     "                # margin=dict(l=65, r=50, b=65, t=90))\n",
@@ -557,12 +576,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fixing the stripe\n",
+    "#fixing the stripe single\n",
     "Y[-1,0:100]=Y[0,0:100]\n",
     "X[-1,0:100]=X[0,0:100]\n",
     "Z[-1,0:100]=Z[0,0:100]\n",
     "\n",
-    "#to share these variables to other notebooks\n",
+    "#fixing the stripe sum\n",
+    "Ys[-1,0:100]=Ys[0,0:100]\n",
+    "Xs[-1,0:100]=Xs[0,0:100]\n",
+    "Zs[-1,0:100]=Zs[0,0:100]\n",
+    "\n",
+    "#to share single MFPDAD variables to other notebooks\n",
     "%store X\n",
     "%store Y\n",
     "%store Z\n",
@@ -577,7 +601,7 @@
    "source": [
     "#fixed stripe\n",
     "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, colorscale='Viridis', connectgaps=True)])\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs theory surf \"+str(nitem), autosize=False,\n",
+    "fig.update_layout(title=\"TFMOx MFPAD theory surf \"+str(nitem), autosize=False,\n",
     "                # width=500,\n",
     "                # height=500,\n",
     "                # margin=dict(l=65, r=50, b=65, t=90))\n",
@@ -592,7 +616,7 @@
    "outputs": [],
    "source": [
     "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\n",
-    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\n",
+    "fig.update_layout(title='TFMOx MFPAD theory surf', autosize=False,\n",
     "                #   width=500, height=500,\n",
     "                #   margin=dict(l=65, r=50, b=65, t=90))\n",
     "                  margin=dict(l=0, r=0, b=0, t=0))\n",
@@ -605,11 +629,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lod_mesh_export(mesh, lods, extension, path):\n",
+    "def lod_mesh_export(mesh, lods, extension, path, enant):\n",
     "    mesh_lods={}\n",
     "    for i in lods:\n",
     "        mesh_lod = mesh.simplify_quadric_decimation(i)\n",
-    "        o3d.io.write_triangle_mesh(path+\"lod_\"+str(i)+extension, mesh_lod)\n",
+    "        if enant == \"R\":\n",
+    "            o3d.io.write_triangle_mesh(path+\"R_lod_\"+str(i)+extension, mesh_lod)\n",
+    "        else:\n",
+    "            o3d.io.write_triangle_mesh(path+\"S_lod_\"+str(i)+extension, mesh_lod) #for 11.5 eV\n",
     "        mesh_lods[i]=mesh_lod\n",
     "    print(\"generation of \"+str(i)+\" LoD successful\")\n",
     "    return mesh_lods"
@@ -624,7 +651,7 @@
     "import open3d as o3d\n",
     "import trimesh\n",
     "\n",
-    "sys.path.append('..'); output_path=(r\"../PYTHON_graphs/OUTPUTS/meshes/\")\n",
+    "sys.path.append('..'); output_path=(r\"../PYTHON_graphs/OUTPUTS/meshes/\"+en+\"/\")\n",
     "alpha_mesh=[]; poisson_mesh=[]; densities=[]\n",
     "\n",
     "alpha_mesh = o3d.geometry.TriangleMesh()\n",
@@ -632,9 +659,9 @@
     "pcd.normals = o3d.utility.Vector3dVector(np.zeros((1, 3)))  # invalidate existing normals\n",
     "camera_loc=np.array([0.,0.,-1.])\n",
     "\n",
-    "#load the point cloud \n",
-    "# point_cloud=np.array([xs,ys,zs]).T #fixed with coordinates matching\n",
-    "point_cloud=np.array([x,y,z]).T #Standard\n",
+    "#load the point cloud: select the desired point cloud\n",
+    "# point_cloud=np.array([xs,ys,zs]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 37 or 4)\n",
+    "point_cloud=np.array([x,y,z]).T #sum MFPAD\n",
     "\n",
     "cloud = PyntCloud.from_instance(\"open3d\", pcd)\n",
     "pcd.points = o3d.utility.Vector3dVector(point_cloud)\n",
@@ -760,12 +787,28 @@
     "bpa_mesh.vertex_colors = o3d.utility.Vector3dVector(density_colors)\n",
     "tri_mesh_pois.vertex_colors = o3d.utility.Vector3dVector(density_colors)\n",
     "\n",
-    "o3d.io.write_triangle_mesh(output_path+\"MFPAD37_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "o3d.io.write_triangle_mesh(output_path+\"MFPAD37_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "# o3d.io.write_triangle_mesh(output_path+\"p_mesh_c.ply\", p_mesh_crop);\n",
+    "if enant == \"R\":\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_th_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_th_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_th_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_th_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_th_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_th_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_p_mesh_c.ply\", p_mesh_crop);\n",
+    "else:\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_th_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_th_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_th_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_th_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_th_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_th_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"_S_p_mesh_c.ply\", p_mesh_crop);\n",
     "\n",
-    "# my_lods = lod_mesh_export(p_mesh_crop, [100000,50000,10000,1000,100], \".ply\", output_path)\n",
-    "my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD37_th.ply\", output_path)"
+    "# my_lods = lod_mesh_export(p_mesh_crop, [100000,50000,10000,1000,100], \".ply\", output_path, enant)\n",
+    "my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_tot_th.ply\", output_path, enant)\n",
+    "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_37_th.ply\", output_path, enant)\n",
+    "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_4_th.ply\", output_path, enant)\n",
+    "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_0_th.ply\", output_path, enant)"
    ]
   },
   {
@@ -774,7 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# o3d.visualization.draw_geometries([pcd, p_mesh_crop], mesh_show_back_face=True)\n",
+    "# o3d.visualization.draw_geometries([pcd, p_mesh_crop], mesh_show_back_face=True\n",
     "# o3d.visualization.draw_geometries([pcd, bpa_mesh], mesh_show_back_face=True)\n",
     "o3d.visualization.draw_geometries([pcd, poisson_mesh],mesh_show_back_face=True)\n",
     "# o3d.visualization.draw_geometries([pcd, poisson_mesh[100000]],point_show_normal=True)"
@@ -828,7 +871,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
