enrgy lables adapted

--- a/3D_MFPADs_experimnents.ipynb
+++ b/3D_MFPADs_experimnents.ipynb
@@ -84,7 +84,7 @@
     "# CH=\"CH12\"\n",
     "path = \"angular_distr_el/\"+CH+\"/\"\n",
     "\n",
-    "enant=\"R\"\n",
+    "enant=\"S\"\n",
     "n2=False\n",
     "gaussian=0.6\n",
     "\n",
@@ -95,7 +95,7 @@
     "loc=path+IDs[0]+dirs[0]\n",
     "\n",
     "#to alow the helicity comparison without the S enantiomer\n",
-    "if en != \"550eV\":\n",
+    "if en != \"KE=11.5e-550eV\":\n",
     "    fileSCR = None\n",
     "    fileSCL = None\n",
     "\n",
@@ -382,6 +382,7 @@
     "    MFPAD_totordered=MFPAD_RCLCR    \n",
     "    MFPAD_totordered_cos=MFPAD_RCLCR_cos\n",
     "    MFPAD_totordered_phi=MFPAD_RCLCR_phi\n",
+    "    MFPAD_totordered_phi_norm=fugi.normalise_with_err(MFPAD_totordered_phi,normtype=3)\n",
     "\n",
     "    MFPAD_totordered_flip=np.array(temp1).reshape(72,nphi,ncos)\n",
     "\n",
@@ -408,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfind[\"phi\"].plot()"
+    "dfind[\"phi\"].plot() #[-180,180]"
    ]
   },
   {
@@ -453,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(theta_rad_full,\".\")"
+    "plt.plot(theta_rad_full,\".\") #[0,pi]"
    ]
   },
   {
@@ -462,10 +463,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(cos_full,\"-\",c=\"r\")\n",
-    "plt.plot(cos_newM,\"-\",c=\"k\")\n",
-    "plt.plot(cos_fullM,\"-\",c=\"y\")\n",
-    "plt.plot(cos_new[:,0],\"-\",c=\"b\")"
+    "plt.plot(cos_full,\"-\",c=\"r\") #red\n",
+    "plt.plot(cos_newM,\"-\",c=\"k\") #black\n",
+    "plt.plot(cos_fullM,\"-\",c=\"y\") #yellow\n",
+    "plt.plot(cos_new[:,0],\"-\",c=\"b\") # blue"
    ]
   },
   {
@@ -490,7 +491,7 @@
     "#NOTE: change the output name of the lod for the mesh and the right s factor in bisplrep\n",
     "checkthis=37\n",
     "# checkthis=4\n",
-    "MFPAD_totordered_phi_norm[checkthis].max()\n",
+    "print(MFPAD_totordered_phi_norm[checkthis].max())\n",
     "\n",
     "#look to the values in b1 map and found the MFPAD. The phi - cos(theta) grid of light direction id indipendendt from the enantiomer\n",
     "#the number of the element depends on the sorting of the b1 map at which the maximum has been calculated. Usually is phi sorted.\n",
@@ -517,10 +518,23 @@
     "'''rbf = interpolate.Rbf(cos_full, phi_full, MFPAD_totordered_phi_norm[checkthis].T,function='multiquadric',smooth=0.1)\n",
     "r3 = rbf(cos_fullM, phi_fullM) #this would prbably be the best for scattered sample'''\n",
     "\n",
-    "ftot = interpolate.bisplrep(cos_full, phi_full, MFPAD_tot_sum_norm.reshape(-1), s=0.7) #MFPAD_tot\n",
-    "f37 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[checkthis].reshape(-1), s=8.5) #MFPAD37\n",
-    "f4 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[4].reshape(-1), s=8.5) #MFPAD4\n",
-    "f0 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[0].reshape(-1), s=4.8) #MFPAD0\n",
+    "if en == \"KE=11.5e-550eV\":\n",
+    "    ftot = interpolate.bisplrep(cos_full, phi_full, MFPAD_tot_sum_norm.reshape(-1), s=0.7) #MFPAD_tot\n",
+    "    f37 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[checkthis].reshape(-1), s=8.5) #MFPAD37\n",
+    "    f4 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[4].reshape(-1), s=8.5) #MFPAD4\n",
+    "    f0 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[0].reshape(-1), s=4.8) #MFPAD0\n",
+    "\n",
+    "elif en== \"KE=4-542eV\":\n",
+    "    ftot = interpolate.bisplrep(cos_full, phi_full, MFPAD_tot_sum_norm.reshape(-1), s=2.5) #MFPAD_tot\n",
+    "    f37 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[checkthis].reshape(-1), s=10.5) #MFPAD37\n",
+    "    f4 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[4].reshape(-1), s=10.5) #MFPAD4\n",
+    "    f0 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[0].reshape(-1), s=6.8) #MFPAD0\n",
+    "\n",
+    "else:\n",
+    "    ftot = interpolate.bisplrep(cos_full, phi_full, MFPAD_tot_sum_norm.reshape(-1), s=2.0) #MFPAD_for energies with only R enantiomer\n",
+    "    f37 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[checkthis].reshape(-1), s=8.5) #MFPAD37\n",
+    "    f4 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[4].reshape(-1), s=8.5) #MFPAD4\n",
+    "    f0 = interpolate.bisplrep(cos_full, phi_full, MFPAD_totordered_phi_norm[0].reshape(-1), s=4.8) #MFPAD0\n",
     "\n",
     "rtot_full = interpolate.bisplev(cos_newfull[:,0], phi_newfull[0,:],ftot).T\n",
     "r37_full = interpolate.bisplev(cos_newfull[:,0], phi_newfull[0,:],f37).T\n",
@@ -557,10 +571,10 @@
     "\n",
     "#NOTE transposed with respect to imshow\n",
     "# fig.pcolormesh(MFPAD_totordered_phi_norm[checkthis].T, cmap='viridis')\n",
-    "ax.pcolormesh(MFPAD_tot_sum.T, cmap='viridis')\n",
+    "ax.pcolormesh(phiM, cosM, MFPAD_tot_sum.T, cmap='viridis')\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_title(titel_fig)"
    ]
   },
@@ -570,7 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tot MPFAD\n",
+    "#tot MPFAD #!NOTE cos axis is reversed compared to RAW! \n",
     "fig,ax=plt.subplots()\n",
     "titel_fig=enant+\" MFPAD tot smooth\"\n",
     "\n",
@@ -578,7 +592,7 @@
     "ax.imshow(rtot.reshape(nbin_density,nbin_density).T, cmap='viridis')\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_title(titel_fig)"
    ]
   },
@@ -588,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tot MPFAD\n",
+    "#tot MPFAD #!NOTE cos axis is reversed compared to RAW!\n",
     "fig,ax=plt.subplots()\n",
     "titel_fig=enant+\" MFPAD tot smooth full\"\n",
     "\n",
@@ -596,7 +610,7 @@
     "ax.imshow(rtot_full.reshape(nbin_density,nbin_density).T, cmap='viridis')\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_title(titel_fig)"
    ]
   },
@@ -611,10 +625,10 @@
     "titel_fig=enant+\" MFPAD el \"+str(checkthis)+\"_RAW\"\n",
     "\n",
     "#NOTE transposed with respect to imshow\n",
-    "ax.pcolormesh(MFPAD_totordered_phi_norm[checkthis].T, cmap='viridis')\n",
+    "ax.pcolormesh(phiM, cosM, MFPAD_totordered_phi_norm[checkthis].T, cmap='viridis')\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_title(titel_fig)"
    ]
   },
@@ -624,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#single MPFAD\n",
+    "#single MPFAD #!NOTE cos axis is reversed compared to RAW!\n",
     "fig,ax=plt.subplots()\n",
     "titel_fig=enant+\" MFPAD el smooth \"+str(checkthis)\n",
     "\n",
@@ -633,7 +647,7 @@
     "ax.imshow(r37.reshape(nbin_density,nbin_density).T, cmap='viridis')\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_title(titel_fig)"
    ]
   },
@@ -643,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#single MPFAD\n",
+    "#single MPFAD #!NOTE cos axis is reversed compared to RAW!\n",
     "fig,ax=plt.subplots()\n",
     "titel_fig=enant+\" MFPAD el \"+str(checkthis)+\"_full\"\n",
     "\n",
@@ -652,7 +666,7 @@
     "ax.imshow(r37_full.reshape(nbin_density,nbin_density).T, cmap='viridis')\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_title(titel_fig)"
    ]
   },
@@ -707,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#single MFPAD to check\n",
+    "#single MFPAD el checkthis\n",
     "#from spherical to cartesian coordinates\n",
     "\n",
     "countsf=r37.reshape(-1)\n",
@@ -718,8 +732,29 @@
     "z37 = countsf * np.cos(theta_rad_full.ravel())\n",
     "Z37 = z37.reshape(nbin_density,nbin_density)\n",
     "\n",
-    "df = np.sqrt(x37**2+y37**2+z37**2)\n",
-    "df_matrix = np.sqrt(X37**2+Y37**2+Z37**2)"
+    "d37 = np.sqrt(x37**2+y37**2+z37**2)\n",
+    "d37_matrix = np.sqrt(X37**2+Y37**2+Z37**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#single MFPAD el 4\n",
+    "#from spherical to cartesian coordinates\n",
+    "\n",
+    "countsf=r4.reshape(-1)\n",
+    "x4 = countsf * np.sin(theta_rad_full.ravel()) * np.cos(phi_rad_full.ravel())\n",
+    "X4 = x4.reshape(nbin_density,nbin_density)\n",
+    "y4 = countsf * np.sin(theta_rad_full.ravel()) * np.sin(phi_rad_full.ravel())\n",
+    "Y4 = y4.reshape(nbin_density,nbin_density)\n",
+    "z4 = countsf * np.cos(theta_rad_full.ravel())\n",
+    "Z4 = z4.reshape(nbin_density,nbin_density)\n",
+    "\n",
+    "d4 = np.sqrt(x4**2+y4**2+z4**2)\n",
+    "d4_matrix = np.sqrt(X4**2+Y4**2+Z4**2)"
    ]
   },
   {
@@ -739,25 +774,34 @@
     "                    # show scale to show the legend according to the color\n",
     "                    )])\n",
     "\n",
-    "# fig1.update_layout(title=\"TFMOx MFPAD el \"+str(checkthis), width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig1.update_layout(title=\"TFMOx MFPAD tot smooth\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig1.show()\n",
     "\n",
-    "fig2 = go.Figure(data=[go.Scatter3d(x=xf, y=yf, z=zf, mode='markers',\n",
-    "                    marker=dict( size=5,color=df, colorscale='Viridis', opacity=1., showscale=True)\n",
+    "fig1_RAW = go.Figure(data=[go.Scatter3d(x=xraw, y=yraw, z=zraw, mode='markers',\n",
+    "                    marker=dict( size=5,color=draw, colorscale='Viridis', opacity=1., showscale=True)\n",
     "                    # color set colours to an array/list of desired values  \n",
     "                    # show scale to show the legend according to the color\n",
     "                    )])\n",
     "\n",
-    "# fig2.update_layout(title=\"TFMOx MFPAD el \"+str(checkthis)+\" fixed\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig1_RAW.update_layout(title=\"TFMOx MFPAD tot RAW\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig1_RAW.show()\n",
+    "\n",
+    "fig2 = go.Figure(data=[go.Scatter3d(x=x37, y=y37, z=z37, mode='markers',\n",
+    "                    marker=dict( size=5,color=d37, colorscale='Viridis', opacity=1., showscale=True)\n",
+    "                    # color set colours to an array/list of desired values  \n",
+    "                    # show scale to show the legend according to the color\n",
+    "                    )])\n",
+    "\n",
+    "fig2.update_layout(title=\"TFMOx MFPAD el 37\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig2.show()\n",
     "\n",
-    "fig3 = go.Figure(data=[go.Scatter3d(x=xs, y=ys, z=zs, mode='markers',\n",
-    "                    marker=dict( size=5,color=ds, colorscale='Viridis', opacity=1., showscale=True)\n",
+    "fig3 = go.Figure(data=[go.Scatter3d(x=x4, y=y4, z=z4, mode='markers',\n",
+    "                    marker=dict( size=5,color=d4, colorscale='Viridis', opacity=1., showscale=True)\n",
     "                    # color set colours to an array/list of desired values  \n",
     "                    # show scale to show the legend according to the color\n",
     "                    )])\n",
     "\n",
-    "fig3.update_layout(title=\"TFMOx MFPAD tot\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig3.update_layout(title=\"TFMOx MFPAD el 4\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig3.show()"
    ]
   },
@@ -930,9 +974,13 @@
     "camera_loc=np.array([0.,0.,-1.])\n",
     "\n",
     "#load the point cloud: select the desired point cloud\n",
-    "# point_cloud=np.array([xf,yf,zf]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 37 or 4)\n",
-    "# point_cloud=np.array([x,y,z]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 37 or 4)\n",
-    "point_cloud=np.array([xs,ys,zs]).T #sum MFPAD\n",
+    "# point_cloud=np.array([x37,y37,z37]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 37)\n",
+    "# point_cloud=np.array([x4,y4,z4]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 4)\n",
+    "# point_cloud=np.array([xraw,yraw,zraw]).T #sum MFPAD raw\n",
+    "point_cloud=np.array([x,y,z]).T #sum MFPAD smooth\n",
+    "\n",
+    "if n2 == True:\n",
+    "    point_cloud=np.array([x_n2,y_n2,z_n2]).T #sum MFPAD smooth\n",
     "\n",
     "cloud = PyntCloud.from_instance(\"open3d\", pcd)\n",
     "pcd.points = o3d.utility.Vector3dVector(point_cloud)\n",
@@ -1249,13 +1297,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1366,13 +1407,6 @@
    "source": [
     "print(fig9.layout)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
