--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -42,14 +42,14 @@
     "#loads the temperaure cmap like Philipp for both matpplotlib and plotly\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
-    "#R enantiomer for experiments\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4eV\";\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
+    "#just R enantiomer for experiments\n",
+    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3-541eV\";\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4-542eV\";\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1-544eV\";\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2-546eV\";\n",
     "\n",
-    "#S enantiomer for experiments\n",
-    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
+    "#has the S enantiomer for experiments\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5e-550eV\";\n",
     "\n",
     "# glob has to be sorted (both in unix and windows)\n",
     "all_files = sorted(glob.glob(path + \"/**.dat\"))\n",
@@ -403,10 +403,10 @@
     "titel_fig=enant+\" MFPAD el \"+str(nitem)\n",
     "\n",
     "if enant == \"R\":\n",
-    "    cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
     "    # cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
     "else:\n",
-    "    cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
     "    # cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot_LF[nitem].T,ax=ax, ystep=0.01, cont=True)\n",
     "\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
@@ -719,6 +719,7 @@
     "# radii = [0.08, 0.1, 0.2, 0.4] #multiple radii!\n",
     "# bpa_mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_ball_pivoting(pcd,o3d.utility.DoubleVector(radii))\n",
     "\n",
+    "#both for single and tot MFPAD\n",
     "radius = 1.5 * avg_dist\n",
     "# radius = 3.5 * avg_dist\n",
     "bpa_mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_ball_pivoting(pcd,o3d.utility.DoubleVector([radius, radius * 2]))\n",
@@ -788,21 +789,21 @@
     "tri_mesh_pois.vertex_colors = o3d.utility.Vector3dVector(density_colors)\n",
     "\n",
     "if enant == \"R\":\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"R_p_mesh_c.ply\", p_mesh_crop);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_p_mesh_c_theory.ply\", p_mesh_crop);\n",
     "else:\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_th_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_th_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"_S_p_mesh_c.ply\", p_mesh_crop);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_p_mesh_c_theory.ply\", p_mesh_crop);\n",
     "\n",
     "# my_lods = lod_mesh_export(p_mesh_crop, [100000,50000,10000,1000,100], \".ply\", output_path, enant)\n",
     "my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_tot_th.ply\", output_path, enant)\n",
